--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.profiles.active=dev
 server.port=80
 spring.application.name=MusicBird
 spring.datasource.url=jdbc:mysql//${MYSQL_HOST}:3306/${DATABASE_NAME}?characterEncoding=UTF8&userSSL=false
-spring.datasource.username=${MYSQL_USE_NAME}
+spring.datasource.username=${MYSQL_USER_NAME}
 spring.datasource.password=${MYSQL_PASSWORD}
