--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.profiles.active=dev
 server.port=80
+spring.profiles.active=dev
 spring.application.name=MusicBird
 spring.datasource.url=jdbc:mysql//${MYSQL_HOST}:3306/${DATABASE_NAME}?characterEncoding=UTF8&userSSL=false
 spring.datasource.username=${MYSQL_USER_NAME}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.flyway.enabled=true
+spring.config.import=optional:file:.env[.properties]
